fixed css collapse

--- a/src/styles/sass/collapse.scss
+++ b/src/styles/sass/collapse.scss
@@ -9,9 +9,7 @@
   width: 100%;
 }
 .collapse {
-  border: 3px solid ;
   border-radius: 10px;
-  background-color: #f7f7f7;
   width: 45%;
   @include mobile {
     width: 100%;
@@ -24,6 +22,8 @@
   min-height: 10em;
   display: flex;
   align-items: center;
+  background-color: #f7f7f7;
+
   color: #ff6060;
   @include mobile {
     padding: 1em 0 1em 0;
